2009-05-05 Xerxes Rånby <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Use bool or enum to set
	JIT optimization dependent on the llvm version.
 
2009-05-05 Xerxes Rånby <xerxes@zafena.se>

	* configure.ac (LLVM_CFLAGS): Remove LLVM svn suffix from
	SHARK_LLVM_VERSION.

2009-05-01  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkFrameCache.hpp: New file.
	* ports/hotspot/src/share/vm/shark/sharkFrameCache.cpp: Likewise.

	* ports/hotspot/src/share/vm/shark/sharkFunction.hpp
	(SharkFunction::_oopmap_frame_size): Removed field.
	(SharkFunction::_extended_frame_size): New field.
	(SharkFunction::extended_frame_size): New method.
	(SharkFunction::oopmap_frame_size): Updated for the above.
	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::CreateBuildFrame): Likewise.

	* ports/hotspot/src/share/vm/shark/sharkState.hpp
	(SharkState::SharkState): Remove optional method argument.
	(SharkState::_frame_cache): New field.
	(SharkState::frame_cache): New method.
	* ports/hotspot/src/share/vm/shark/sharkState.cpp
	(SharkState::SharkState): Remove optional method argument.
	(SharkState::initialize): Initialize frame cache.
	(SharkState::equal_to): Compare frame cache.
	(SharkState::merge): Merge frame cache.
	(SharkState::decache_for_Java_call): Pass frame cache.
	(SharkState::cache_after_Java_call): Likewise.
	(SharkState::decache_for_VM_call): Likewise.
	(SharkState::cache_after_VM_call): Likewise.
	(SharkState::decache_for_trap): Likewise.
	(SharkEntryState::SharkEntryState): Don't load initial local
	variables directly, populate the state with dummy values and
	use a SharkFunctionEntryCacher to perform the loads.

	* ports/hotspot/src/share/vm/shark/sharkCacheDecache.hpp
	(SharkCacherDecacher::SharkCacherDecacher): Remove bci argument,
	and add frame cache argument.
	(SharkCacherDecacher::_frame_cache): New field.
	(SharkCacherDecacher::frame_cache): New method.